Fixed the overlapping issue with multiple cards on mobile resolution

--- a/src/4-components/c1-cards/c1-style.scss
+++ b/src/4-components/c1-cards/c1-style.scss
@@ -5,6 +5,7 @@
 	margin: map-get($act-space, "desktop-5") 0px;
 	@include devices(mobile) {
 		grid-template-columns: repeat(1, minmax(0, 1fr));
+		column-gap:0;
 	}
 	@include devices(tablet) {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -350,4 +351,8 @@
 			border: 0px solid transparent;
 		}
 	}
+		@include devices(mobile) {
+		    grid-column: span 2;
+		    grid-row: span 2;
+		}
 }
